<resources>
    <string name="app_name">乐速家</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="immediately_login">立即登录</string>
    <string name="forget_password">忘记密码?</string>

    <string name="setting_pwd">设置密码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="please_intput_phone_num">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="invite_code">邀请码:</string>
    <string name="nike_name">昵称:</string>
    <string name="phone_num">手机号码:</string>
    <string name="identifying_code">验证码:</string>
    <string name="login_password">登录密码:</string>
    <string name="check_password">确认密码:</string>
    <string name="pay_password">支付密码:</string>
    <string name="existing_account">已有账号?</string>
    <string name="forget_login_password">忘记登录密码</string>
    <string name="submit">提交</string>

    <string name="pwd_type">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="forget_pay_pwd">忘记支付密码？</string>
    <string name="tv_project_Ownership">版权归属深圳精英汇实业有限公司所有</string>

</resources>
