<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="418dp"
            android:background="@mipmap/img_login_bg" />

        <LinearLayout
            android:layout_width="345dp"
            android:layout_height="280dp"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="150dp"
            android:background="@drawable/white_shape_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_phone"
                    style="@style/edittext_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="请输入手机号"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_phone" />

            </LinearLayout>

            <View
                style="@style/gray_line_style"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_idenfy_code"
                    style="@style/edittext_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="请输入验证码"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />


                <TextView
                    android:id="@+id/tv_get_idenfy_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="22dp"
                    android:text="@string/get_identifying_code"
                    android:textColor="@color/btn_color" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_idenfy_code" />
            </LinearLayout>

            <View
                style="@style/gray_line_style"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="13dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/ed_invatation_code"
                    style="@style/edittext_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="请输入推荐码(选填)"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_invitation_code" />

            </LinearLayout>

            <View
                style="@style/gray_line_style"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="13dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_pwd"
                    style="@style/edittext_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="@string/pwd_type"
                    android:hint="请输入登录密码"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_pwd" />

            </LinearLayout>

            <View
                style="@style/gray_line_style"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_second_pwd"
                    style="@style/edittext_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="@string/pwd_type"
                    android:hint="请输入登录密码"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_pwd" />

            </LinearLayout>

            <View
                style="@style/gray_line_style"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="13dp" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/cb_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@drawable/register_agreement_shape"
            android:checked="true" />

        <TextView
            android:id="@+id/tv_register_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="《会员注册协议》"
            android:textColor="@color/btn_color" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登录"
            android:textColor="@color/btn_color" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        style="@style/button_style"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:text="@string/register" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <View
            style="@style/gray_line_style"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint_text_color"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="已有账号去登录"/>

        <View
            style="@style/gray_line_style"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>